--- a/index.htm
+++ b/index.htm
@@ -1,32 +1,17 @@
-<html><head><title>fsb</title>
-<style type="text/css">canvas{}</style>
-<script type="text/javascript">
-function take(x,y){var r=[];if(x>0){r[x-1]=0;r.fill(y,0,x);}return r;}
-function til(x){var r=[];return take(x,0).map(function(v,i,a){return i;});}
-function sho(x){console.log(x);return x;}
-R=Math.round;F=Math.floor;
-function fr(x,r,c){x.fillStyle='rgb('+c.map(R).join()+')';x.fillRect.apply(x,r);return x;}
-function tx(x,t,p,z,c){x.fillStyle='rgb('+c.join()+')';x.font=z+'px sans';x.fillText(t,p[0],p[1]);return x;}
-function cs(n){return til(n).map(function(x){return[x>n/2?256/n*x:0,0,x<=n/2?256/n*(x+n/2):0];});}
-function rani(x){return F(Math.random()*x);}
-function rand(x){return x[rani(x.length)];}
-function draw(){
-  var u="GBP USD EUR JPY CHF CAD AUD NZD".split(" "),c=document.getElementById('canvas');
-  if(c.getContext){
-   var g=c.getContext('2d');
-   var w=512;c.width=w;c.height=w;
-   var n=u.length;var o=[50,70];var rw=(w-o[0])/n,rh=(w-o[1])/n;
-   var v=cs(5);
-   var G=til(n).map(function(x){return til(n).map(function(y){var X=n-x-1;return X>y?[rand(v),F(x*rw)+o[0],F(y*rh+o[1]),F(rw-1),F(rh-1)]:[];})});
-   G.map(function(x){x.map(function(y){y.length?fr(g,y.slice(1),y[0]):0;})});
-   var Tx=til(n-1).map(function(x){tx(g,u[x],[F(x*rw)+o[0]+10,o[1]-10],12,[50,0,100]);});
-   var Ty=til(n-1).map(function(y){tx(g,u[n-1-y],[10,F(y*rh)+10+o[1]+15],12,[50,0,100]);});
-   tx(g,"Currency Pair Volatility",[80,30],20,[0,0,0]);
-}}
-/*function dr(x,w,o,a){var n=a.length;var r=(w-o)/n;for(i=0;i<n;i++){for(j=0;j<n;j++){fr(x,[R(i*r)+o,R(j*r)+o,R(r),R(r)],a[i][j]);}}}
- var d=300;
- var a=til(d).map(function(x){return til(d).map(function(y){return [x*y%d,x%d,y%d];})});
-*/
-</script></head>
-<body onload="draw();"><canvas id="canvas"></canvas></body>
-</html>
+<script src="kof.js"></script>
+<script>
+kofinit();
+
+function hm()
+{ g.loginWindow = new fin.desktop.Window({
+    name: "hm",
+    url: "hm.htm",
+    defaultWidth: 512,
+    defaultHeight: 512,
+    frame: false,
+    resize: false,
+    autoShow: true,
+}, () => { console.log("The window has successfully been created"); },
+   () => { console.log("Error creating window"); });
+}
+</script>
