--- a/hm.htm
+++ b/hm.htm
@@ -23,10 +23,29 @@ function draw(){
    var Ty=til(n-1).map(function(y){tx(g,u[n-1-y],[10,F(y*rh)+10+o[1]+15],12,[50,0,100]);});
    tx(g,"Currency Pair Volatility",[80,30],20,[0,0,0]);
 }}
-/*function dr(x,w,o,a){var n=a.length;var r=(w-o)/n;for(i=0;i<n;i++){for(j=0;j<n;j++){fr(x,[R(i*r)+o,R(j*r)+o,R(r),R(r)],a[i][j]);}}}
- var d=300;
- var a=til(d).map(function(x){return til(d).map(function(y){return [x*y%d,x%d,y%d];})});
+/*
+//define onpub for both websocket and openfin
+var onpub;
+document.addEventListener("DOMContentLoaded", function(){ init(); });
+function openfin()
+{
+}
+function wsconnect()
+{if ("WebSocket" in window)
+ {var l=window.location,ws=new WebSocket("ws://"+(l.hostname||"localhost")+":"+(l.port||"5000")+"/");function wL(x){console.Log(x);}
+  wL("connecting...");
+  ws.onopen=function(e){wL("connected");} ws.onclose=function(e){wL("disconnected");} ws.onmessage=function(e){wL(e.data);} ws.onerror=function(e){wL(e.data);}
+  return ws;
+ }else return 0;
+}
+function openfin(){fin.desktop.main(()=>(return 1;))}
+function init()
+{if("fin"       in window) openfin();   else
+ if("Websocket" in window) wsconnect(); else
+ fail()
+}
 */
 </script></head>
+
 <body onload="draw();"><canvas id="canvas"></canvas></body>
 </html>
