--- a/hm.htm
+++ b/hm.htm
@@ -2,7 +2,7 @@
 <script src="hm.js"></script>
 <script>document.addEventListener("DOMContentLoaded",hmtest);
  /*
- //define onpub for both websocket and openfin
+ //define onpub for both websocket and Openfin
  var onpub;
  document.addEventListener("DOMContentLoaded", function(){ init(); });
  function openfin()
