--- a/hm.htm
+++ b/hm.htm
@@ -1,5 +1,6 @@
 <html><head><title>Heat Map</title>
 <script src="hm.js"></script>
+<script src="ws.js"></script>
 <script>document.addEventListener("DOMContentLoaded",hmtest);
  /*
  //define onpub for both websocket and Openfin
