--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,6 @@
-<!--script src="kof.js"></script-->
+<html><head><title>Openfin Heat Map demo</title>
+<script src="hm.js"></script>
+<script src="kof.js"></script>
 <script>
 L=function(x){return console.log(x);}
 
@@ -15,3 +17,5 @@ function hm()
    () => { L("Error creating window"); });
 }
 </script>
+<script>document.addEventListener("DOMContentLoaded",hmtest);</script></head>
+<body><canvas id="canvas" width="512"></canvas></body></html>
