--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,4 @@
-<html><head><title>Openfin Heat Map demo</title>
-<script src="hm.js"></script>
+<html><head><title>headless</title>
 <script src="kof.js"></script>
 <script>
 L=function(x){return console.log(x);}
@@ -16,6 +15,4 @@ function hm()
 }, () => { L("The window has successfully been created"); },
    () => { L("Error creating window"); });
 }
-</script>
-<script>document.addEventListener("DOMContentLoaded",hmtest);</script></head>
-<body><canvas id="canvas" width="512"></canvas></body></html>
+</script></head><body></body><.html>
