--- a/index.htm
+++ b/index.htm
@@ -15,4 +15,4 @@ function hm()
 }, () => { L("The window has successfully been created"); },
    () => { L("Error creating window"); });
 }
-</script></head><body></body><.html>
+</script></head><body></body></html>
