--- a/hm.htm
+++ b/hm.htm
@@ -1,5 +1,7 @@
 <html><head><title>Openfin Heat Map Demo</title>
 <script src="hm.js"></script>
+<script src="c.js"></script>
 <script src="kof.js"></script>
-<script>document.addEventListener("DOMContentLoaded",hmtest);</script></head>
+<script src="index.js"></script>
+<script>document.addEventListener("DOMContentLoaded",run);</script></head>
 <body><canvas id="canvas" width="512"></canvas></body></html>
