--- a/index.htm
+++ b/index.htm
@@ -2,13 +2,10 @@
 <script src="c.js"></script>
 <script src="kof.js"></script>
 <script>
-var run;
-(function(){ "use strict";
-  run=function(){
-    var l=window.location,h=l.hostname||"localhost",p=l.port||"5000";
-    wshot(h,p,"til 6").then(x=>console.log(x));
-  }
-})();
+function run(){ "use strict";
+ var l=window.location,h=l.hostname||"localhost",p=l.port||"5000";
+ wshot(h,p,"til 6").then(x=>console.log(x));
+}
 document.addEventListener("DOMContentLoaded",run);
 </script>
 <!--script>
