--- a/index.htm
+++ b/index.htm
@@ -2,13 +2,6 @@
 <script src="c.js"></script>
 <script src="kof.js"></script>
 <script>
-function run(){ "use strict";
- var l=window.location,h=l.hostname||"localhost",p=l.port||"5000";
- wshot(h,p,"til 6").then(x=>console.log(x));
-}
-document.addEventListener("DOMContentLoaded",run);
-</script>
-<!--script>
 L=function(x){return console.log(x);}
 
 function hm()
@@ -23,4 +16,6 @@ function hm()
 }, () => { L("The window has successfully been created"); },
    () => { L("Error creating window"); });
 }
-</script--></head><body></body></html>
+document.addEventListener("DOMContentLoaded",hm);
+</script></head><body></body></html>
+
