--- a/hm.htm
+++ b/hm.htm
@@ -6,6 +6,7 @@
 function run(){ "use strict";
  var l=window.location,h=l.hostname||"localhost",p=l.port||"5000";
  wshot(h,p,"til 6").then(x=>console.log(x)).catch(function(x){console.log(x);});
+ wshot(h,p,"info`").then(x=>console.log(x)).catch(function(x){console.log(x);});
 }
 document.addEventListener("DOMContentLoaded",run);
 </script>
